# WorkAssistant

./: .augmentignore  .gitignore  BUILD_STATUS.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  DEVELOPMENT_PROGRESS.md  DEVELOPMENT_SUMMARY.md  FINAL_REPORT.md  LLAMA_VERIFICATION_REPORT.md  README.md  build_simple.sh  log.txt  setup-vnc.sh  test_ai_only.cpp  test_basic_functionality.cpp  test_benchmark.cpp  test_headers_only.cpp  test_llama_verification.cpp  test_model_loading.cpp  test_ocr_manager.cpp  test_ocr_simple.cpp  test_real_llama.cpp  test_web_server.cpp
config/: work_assistant.conf
include/: ai_engine.h  application.h  command_line_parser.h  common_types.h  config_manager.h  daemon.h  daemon_service.h  directory_manager.h  event_manager.h  logger.h  minicpm_v_engine.h  ocr_engine.h  paddle_ocr_engine.h  performance_monitor.h  screen_capture.h  storage_engine.h  thread_pool.h  web_server.h  websocket_server.h  window_monitor.h  window_monitor_v2.h
scripts/: download_paddle_inference.sh
src/: main.cpp
src/ai/: CMakeLists.txt  ai_content_analyzer.cpp  llama_engine.cpp  placeholder.cpp
src/core/: CMakeLists.txt  application.cpp  capture_utils.cpp  command_line_parser.cpp  event_manager.cpp  logger.cpp  minicpm_v_engine.cpp  minicpm_v_model.cpp  ocr_manager.cpp  ocr_manager_backup.cpp  ocr_manager_old.cpp  ocr_utils.cpp  paddle_ocr_engine.cpp  performance_monitor.cpp  screen_capture_manager.cpp  tesseract_engine.cpp  thread_pool.cpp
src/platform/: CMakeLists.txt  screen_capture_lite_impl.cpp  window_monitor_factory.cpp
src/platform/linux/: atspi_client.cpp  atspi_client.h  linux_daemon.cpp  linux_daemon.h  linux_screen_capture.cpp  linux_screen_capture.h  x11_window_monitor.cpp  x11_window_monitor.h  x11_window_monitor_minimal.cpp
src/platform/windows/: win32_daemon.cpp  win32_daemon.h  win32_screen_capture.cpp  win32_screen_capture.h  win32_window_monitor.cpp  win32_window_monitor.h
src/storage/: CMakeLists.txt  config_manager.cpp  directory_manager.cpp  encrypted_storage_manager.cpp  placeholder.cpp  sqlite_storage_engine.cpp  storage_utils.cpp
src/web/: CMakeLists.txt  api_handlers.cpp  drogon_web_server.cpp  placeholder.cpp  web_server.cpp  websocket_handler.cpp  websocket_server.cpp  websocket_server_factory.cpp
tests/: CMakeLists.txt  test_ai.cpp  test_integration.cpp  test_storage.cpp
web/static/: app.js  index.html  styles.css
